--- a/game.html
+++ b/game.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head><title>CADDILAC KWASI AKOTO YOUR FULL STACK DEVELOPER</title>
+    <head><title>SAMMYKEYS YOUR FULL STACK DEVELOPER</title>
     <style>
         body{
             background-image: -moz-radial-gradient();
@@ -61,7 +61,7 @@
     </style>
     </head>
     <body>
-        <h1>THIS IS A SIMPLE GAME DEVELOPED BY CADDILAC KWASI AKOTO</h1>
+        <h1>THIS IS A SIMPLE GAME DEVELOPED BY SAMMYKEYS OFFICIAL</h1>
         <p>FOLLOW ME FOR MORE RELATED GAMES</p>
         <br>
         <br>
