added a marquee tag to display notifications on the page

--- a/game.html
+++ b/game.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head><title>SAMMYKEYS YOUR FULL STACK DEVELOPER</title>
+    <head><title>SAMMYKEYS YOUR GAME DEVELOPER</title>
     <style>
         body{
             background-image: -moz-radial-gradient();
@@ -183,7 +183,6 @@
           Wins : ${score.wins}, Losses : ${score.losses}, Ties : ${score.ties}, CLosedAttemps : ${score.closeattempt}  `);
           }
           location.reload();
-        
     </script>   
     </body>
 </html>
