added an alert message to display welcome message

--- a/game.html
+++ b/game.html
@@ -61,7 +61,7 @@
     </style>
     </head>
     <body>
-        <h1>THIS IS A SIMPLE GAME DEVELOPED BY SAMMYKEYS OFFICIAL</h1>
+       <marquee> <h1>THIS IS A SIMPLE GAME DEVELOPED BY SAMMYKEYS OFFICIAL</h1></marquee>
         <p>FOLLOW ME FOR MORE RELATED GAMES</p>
         <br>
         <br>
