added a marquee tag to display list of students advanced in certain programming languages

--- a/game.html
+++ b/game.html
@@ -76,25 +76,23 @@
        <br><br>
        <h4>RESULTS WILL BE UPLOADED HERE</h4>
 
-       <marquee><table>
-
-        <tr>
+       <marquee>
+        <table>
         <thead>
-                
+            <tr></tr>   
                 <th>Best C++ programmer in BSC ComputerScience GROUPB</th>
                 <th>Best C# programmer in BSC ComputerScience GROUPB</th>
                 <th>Best python developer in BSC ComputerScience GROUPB</th>
                 <th>Best javascript programmer in BSC ComputerScience GROUPB</th 
-                    <th>Best Java programmer</th>   
+                </tr>
+            
         </thead>
-        </tr>
         <tbody>
             <tr>
                 <td>Abednego</td>
                 <td>Abednego</td>
                 <td>Caddilac Akoto Osei</td>
-                <td>Rexford Osei</td>
-                <td>Caddilac Akoto Osei</td>
+/                <td>Rexford Osei</td>
             </tr>
         </tbody>
        </table></marquee>
